--- a/deploy/helm/csi-s3/templates/secret.yaml
+++ b/deploy/helm/csi-s3/templates/secret.yaml
@@ -12,4 +12,7 @@ stringData:
   secretAccessKey: {{ .Values.secret.secretKey }}
 {{- end }}
   endpoint: {{ .Values.secret.endpoint }}
+{{- if .Values.secret.region }}
+  region: {{ .Values.secret.region }}
+{{- end }}
 {{- end -}}
