Fix Hardcoded /var/lib/kubelet, no ability to override from Helm
fix https://github.com/yandex-cloud/k8s-csi-s3/issues/71

--- a/deploy/helm/csi-s3/templates/csi-s3.yaml
+++ b/deploy/helm/csi-s3/templates/csi-s3.yaml
@@ -86,6 +86,8 @@ spec:
           env:
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
+            - name: PLUGIN_DIR           
+              value: {{ .Values.kubeletPath }}/plugins/ru.yandex.s3.csi
             - name: NODE_ID
               valueFrom:
                 fieldRef:
