--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.40.1
+    created: "2024-02-12T22:21:16.510074243Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: ec3d50d8cb4722af5b7dd230330099f8f00f39432609f41faddd3698d868146c
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.40.1.tgz
+    version: 0.40.1
+  - apiVersion: v1
     appVersion: 0.40.0
     created: "2024-02-12T22:17:45.58682678Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -46,4 +61,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2024-02-12T22:17:45.586206067Z"
+generated: "2024-02-12T22:21:16.50951161Z"
