--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.40.3
+    created: "2024-03-13T15:53:14.471969559Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: a1e418ed6b603a375395286848a680106d9d851254cd0d2b04e73d4de488c21c
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.40.3.tgz
+    version: 0.40.3
+  - apiVersion: v1
     appVersion: 0.40.1
     created: "2024-03-13T15:49:25.555395599Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -61,4 +76,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2024-03-13T15:49:25.554859803Z"
+generated: "2024-03-13T15:53:14.471454779Z"
