--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.40.6
+    created: "2024-03-29T09:55:44.282887331Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: 0d28a440355bd1d5d589028fcc01167c2a66eb3864bf9cd3401d61a0c42c4d48
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.40.6.tgz
+    version: 0.40.6
+  - apiVersion: v1
     appVersion: 0.40.3
     created: "2024-03-13T15:53:14.471969559Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -76,4 +91,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2024-03-13T15:53:14.471454779Z"
+generated: "2024-03-29T09:55:44.28168987Z"
