--- a/deploy/kubernetes/provisioner.yaml
+++ b/deploy/kubernetes/provisioner.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: csi-provisioner-sa
+  name: csi-s3-provisioner-sa
   namespace: kube-system
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: external-provisioner-runner
+  name: csi-s3-external-provisioner-runner
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -28,26 +28,26 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-provisioner-role
+  name: csi-s3-provisioner-role
 subjects:
   - kind: ServiceAccount
-    name: csi-provisioner-sa
+    name: csi-s3-provisioner-sa
     namespace: kube-system
 roleRef:
   kind: ClusterRole
-  name: external-provisioner-runner
+  name: csi-s3-external-provisioner-runner
   apiGroup: rbac.authorization.k8s.io
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: csi-provisioner-s3
+  name: csi-s3-provisioner
   namespace: kube-system
   labels:
-    app: csi-provisioner-s3
+    app: csi-s3-provisioner
 spec:
   selector:
-    app: csi-provisioner-s3
+    app: csi-s3-provisioner
   ports:
     - name: csi-s3-dummy
       port: 65535
@@ -55,20 +55,20 @@ spec:
 kind: StatefulSet
 apiVersion: apps/v1
 metadata:
-  name: csi-provisioner-s3
+  name: csi-s3-provisioner
   namespace: kube-system
 spec:
   serviceName: "csi-provisioner-s3"
   replicas: 1
   selector:
     matchLabels:
-      app: csi-provisioner-s3
+      app: csi-s3-provisioner
   template:
     metadata:
       labels:
-        app: csi-provisioner-s3
+        app: csi-s3-provisioner
     spec:
-      serviceAccount: csi-provisioner-sa
+      serviceAccount: csi-s3-provisioner-sa
       tolerations:
         - key: node-role.kubernetes.io/master
           operator: Exists
