Publish csi-s3-0.40.8.tgz

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.40.8
+    created: "2024-04-22T09:54:54.094070514Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: 08808de3d530e97272bf183a2f2b7433fdd7989350dc1270f35c761159bb4444
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.40.8.tgz
+    version: 0.40.8
+  - apiVersion: v1
     appVersion: 0.40.6
     created: "2024-04-22T09:47:47.274224019Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -91,4 +106,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2024-04-22T09:47:47.273677654Z"
+generated: "2024-04-22T09:54:54.093560573Z"
