ADD local host connection minio

--- a/deploy/helm/csi-s3/templates/csi-s3.yaml
+++ b/deploy/helm/csi-s3/templates/csi-s3.yaml
@@ -84,6 +84,13 @@ spec:
             - "--nodeid=$(NODE_ID)"
             - "--v=4"
           env:
+            - name: MY_POD_HOST_IP
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: status.hostIP
+            - name: MINIO_PORT
+              value: "{{ .Values.minio.port }}"
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
             - name: NODE_ID
