--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.41.1
+    created: "2024-07-01T09:00:13.13341067Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: 2e0ddf9190ed87f13e54fa28b8a89d4151ed051cc524ab8d24ca0e03cca8463d
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.41.1.tgz
+    version: 0.41.1
+  - apiVersion: v1
     appVersion: 0.41.0
     created: "2024-07-01T08:54:56.95251216Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -121,4 +136,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2024-07-01T08:54:56.952003186Z"
+generated: "2024-07-01T09:00:13.132880799Z"
