--- a/deploy/helm/csi-s3/templates/csi-s3.yaml
+++ b/deploy/helm/csi-s3/templates/csi-s3.yaml
@@ -49,6 +49,9 @@ spec:
         {{- with .Values.tolerations.node }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
+      {{ - if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+      {{ - end }}
       serviceAccount: csi-s3
       containers:
         - name: driver-registrar
