Add secret: true to manifest for secret_key

--- a/deploy/helm/csi-s3/manifest.yaml
+++ b/deploy/helm/csi-s3/manifest.yaml
@@ -44,6 +44,7 @@ user_values:
       ru: Секретный ключ S3.
     string_value:
       default_value: ""
+      secret: true
   - name: storageClass.singleBucket
     title:
       en: Single S3 bucket for volumes
