--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.42.1
+    created: "2024-11-15T16:16:21.050428202Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: f3023211106f1424b875931068b150bf7cd597e9160bdff90e0c3946f44dfcc9
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.42.1.tgz
+    version: 0.42.1
+  - apiVersion: v1
     appVersion: 0.41.1
     created: "2024-11-15T16:11:54.117057489Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -136,4 +151,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2024-11-15T16:11:54.116509356Z"
+generated: "2024-11-15T16:16:21.049900368Z"
