feat: added default priorityClassName to values
Co-authored-by: Bartosz Pijet <crazyponkeymen@gmail.com>

--- a/deploy/helm/csi-s3/values.yaml
+++ b/deploy/helm/csi-s3/values.yaml
@@ -47,6 +47,6 @@ tolerations:
 
 nodeSelector: {}
 
-priorityClassName: ""
+priorityClassName: "system-node-critical"
 
 kubeletPath: /var/lib/kubelet
