:sparkles: (provisioner) added extraArgs to values.yaml to pass arguments to provisioner container
Signed-off-by: Llyth <6819575+Llyth@users.noreply.github.com>

--- a/deploy/helm/csi-s3/manifest.yaml
+++ b/deploy/helm/csi-s3/manifest.yaml
@@ -1,6 +1,6 @@
 helm_chart:
   name: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-s3
-  tag: 0.43.2
+  tag: 0.43.3
 requirements:
   k8s_version: ">=1.13"
 images:
@@ -8,6 +8,15 @@ images:
   - full: images.provisioner
   - full: images.csi
 user_values:
+  - name: provisioner.extraArgs
+    title:
+      en: Extra arguments for the provisioner
+      ru: Дополнительные аргументы для провиженера
+    description:
+      en: Extra arguments to pass to the provisioner container
+      ru: Дополнительные аргументы, которые будут переданы в контейнер провиженера.
+    string_value:
+      default_value: ""
   - name: storageClass.create
     title:
       en: Create storage class
