--- a/deploy/helm/csi-s3/values.yaml
+++ b/deploy/helm/csi-s3/values.yaml
@@ -5,7 +5,14 @@ images:
   # Source: quay.io/k8scsi/csi-provisioner:v2.1.0
   provisioner: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-provisioner:v2.1.0
   # Main image
-  csi: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-s3-driver:0.43.2
+  csi: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-s3-driver:0.43.3
+
+provisioner:
+  # Extra arguments for the provisioner
+  # Example - change the bucket name prefix from "pvc" to "pvc-s3":
+  # extraArgs:
+  #   - "--volume-name-prefix=pvc-s3"
+  extraArgs: []
 
 storageClass:
   # Specifies whether the storage class should be created
