Fix: install multiple sc through single helm chart

--- a/deploy/helm/csi-s3/templates/csi-s3.yaml
+++ b/deploy/helm/csi-s3/templates/csi-s3.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.csiS3.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -127,3 +128,4 @@ spec:
           hostPath:
             path: /run/systemd
             type: DirectoryOrCreate
+{{- end -}}
