--- a/deploy/helm/csi-s3/templates/driver.yaml
+++ b/deploy/helm/csi-s3/templates/driver.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.driver.create -}}
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
@@ -8,3 +9,4 @@ spec:
   fsGroupPolicy: File # added in Kubernetes 1.19, this field is GA as of Kubernetes 1.23
   volumeLifecycleModes: # added in Kubernetes 1.16, this field is beta
     - Persistent
+{{- end -}}
