--- a/deploy/helm/csi-s3/templates/provisioner.yaml
+++ b/deploy/helm/csi-s3/templates/provisioner.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.provisioner.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -114,3 +115,4 @@ spec:
       volumes:
         - name: socket-dir
           emptyDir: {}
+{{- end -}}
