--- a/deploy/helm/csi-s3/values.yaml
+++ b/deploy/helm/csi-s3/values.yaml
@@ -1,25 +1,24 @@
----
 images:
   # Source: quay.io/k8scsi/csi-node-driver-registrar:v1.2.0
-  registrar: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-node-driver-registrar:v1.2.0
+  registrar: "cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-node-driver-registrar:v1.2.0"
   # Source: quay.io/k8scsi/csi-provisioner:v2.1.0
-  provisioner: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-provisioner:v2.1.0
+  provisioner: "cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-provisioner:v2.1.0"
   # Main image
-  csi: cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-s3-driver:0.43.0
+  csi: "cr.yandex/crp9ftr22d26age3hulg/yandex-cloud/csi-s3/csi-s3-driver:0.43.0"
 
 storageClass:
   # Specifies whether the storage class should be created
   create: true
   # Name
-  name: csi-s3
+  name: "csi-s3"
   # Use a single bucket for all dynamically provisioned persistent volumes
   singleBucket: ""
   # mounter to use - either geesefs, s3fs or rclone (default geesefs)
-  mounter: geesefs
+  mounter: "geesefs"
   # GeeseFS mount options
   mountOptions: "--memory-limit 1000 --dir-mode 0777 --file-mode 0666"
   # Volume reclaim policy
-  reclaimPolicy: Delete
+  reclaimPolicy: "Delete"
   # Annotations for the storage class
   # Example:
   # annotations:
@@ -30,13 +29,13 @@ secret:
   # Specifies whether the secret should be created
   create: true
   # Name of the secret
-  name: csi-s3-secret
+  name: "csi-s3-secret"
   # S3 Access Key
   accessKey: ""
   # S3 Secret Key
   secretKey: ""
   # Endpoint
-  endpoint: https://storage.yandexcloud.net
+  endpoint: "https://storage.yandexcloud.net"
   # Region
   region: ""
 
@@ -47,4 +46,13 @@ tolerations:
 
 nodeSelector: {}
 
-kubeletPath: /var/lib/kubelet
+kubeletPath: "/var/lib/kubelet"
+
+csiS3:
+  create: true
+
+driver:
+  create: true
+
+provisioner:
+  create: true
