--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,21 @@ apiVersion: v1
 entries:
   csi-s3:
   - apiVersion: v1
+    appVersion: 0.43.2
+    created: "2025-08-12T11:30:02.462633702Z"
+    description: Container Storage Interface (CSI) driver for S3 volumes
+    digest: 16328cafcd0ff2596d45b8da002bde0950648896f5b7b068d7b282bed42830f0
+    home: https://github.com/yandex-cloud/k8s-csi-s3
+    icon: https://raw.githubusercontent.com/yandex-cloud/geesefs/master/doc/geesefs.png
+    keywords:
+    - s3
+    name: csi-s3
+    sources:
+    - https://github.com/yandex-cloud/k8s-csi-s3/deploy/helm
+    urls:
+    - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.43.2.tgz
+    version: 0.43.2
+  - apiVersion: v1
     appVersion: 0.43.0
     created: "2025-06-18T08:34:11.997754055Z"
     description: Container Storage Interface (CSI) driver for S3 volumes
@@ -166,4 +181,4 @@ entries:
     urls:
     - https://yandex-cloud.github.io/k8s-csi-s3/charts/csi-s3-0.37.4.tgz
     version: 0.37.4
-generated: "2025-06-18T08:34:11.996512521Z"
+generated: "2025-08-12T11:30:02.462128903Z"
