--- a/deploy/helm/csi-s3/manifest.yaml
+++ b/deploy/helm/csi-s3/manifest.yaml
@@ -13,7 +13,7 @@ user_values:
       en: Create storage class
       ru: Создать класс хранения
     description:
-      en: Specifies whether the storage class should be created
+      en: Enable this option if a storage class should be created.
       ru: Выберите, чтобы создать новый S3-класс хранения при развёртывании приложения.
     boolean_value:
       default_value: true
@@ -22,62 +22,62 @@ user_values:
       en: Create secret
       ru: Создать секрет
     description:
-      en: Specifies whether the secret should be created
+      en: Enable this option if a new secret should be created for the storage class instead of using the current one.
       ru: Выберите, чтобы создать новый секрет для класса хранения при установке приложения, а не использовать существующий.
     boolean_value:
       default_value: true
   - name: secret.accessKey
     title:
-      en: S3 Access Key ID
+      en: S3 access key ID
       ru: Идентификатор ключа S3
     description:
-      en: S3 Access Key ID
+      en: The ID of the S3 access key.
       ru: Идентификатор ключа S3.
     string_value:
       default_value: ""
   - name: secret.secretKey
     title:
-      en: S3 Secret Key
+      en: S3 secret key
       ru: Секретный ключ S3
     description:
-      en: S3 Secret Key
+      en: S3 secret key.
       ru: Секретный ключ S3.
     string_value:
       default_value: ""
       secret: true
   - name: storageClass.singleBucket
     title:
-      en: Single S3 bucket for volumes
+      en: General S3 bucket for volumes
       ru: Общий бакет S3 для томов
     description:
-      en: Single S3 bucket to use for all dynamically provisioned persistent volumes
+      en: Enter the name of an S3 bucket to use it for all dynamically provisioned persistent volumes. If you leave this field empty, a new bucket will be created for each volume.
       ru: Общий бакет S3, в котором будут создаваться все динамически распределяемые тома. Если пусто, под каждый том будет создаваться новый бакет.
     string_value:
       default_value: ""
   - name: secret.endpoint
     title:
-      en: S3 endpoint
+      en: S3 service address
       ru: Адрес S3-сервиса
     description:
-      en: S3 service endpoint to use
+      en: The endpoint of the S3 service to be used.
       ru: Адрес S3-сервиса, который будет использоваться.
     string_value:
       default_value: "https://storage.yandexcloud.net"
   - name: secret.region
     title:
       en: S3 region
-      ru: S3 регион
+      ru: Регион S3
     description:
-      en: S3 service region to use
+      en: The S3 service region to be used.
       ru: Регион используемого сервиса S3.
     string_value:
       default_value: ""
   - name: storageClass.mountOptions
     title:
-      en: GeeseFS mount options
+      en: GeeseFS mounting options
       ru: Опции монтирования GeeseFS
     description:
-      en: GeeseFS mount options to use. Refer to `geesefs --help` command output for the whole list of options (https://github.com/yandex-cloud/geesefs).
+      en: The GeeseFS mount options to use. For a complete list and description of the options, see the output of the`geesefs --help` command (https://github.com/yandex-cloud/geesefs).
       ru: Опции монтирования GeeseFS. Полный перечень и описание опций смотрите в выводе команды `geesefs --help` (https://github.com/yandex-cloud/geesefs).
     string_value:
       default_value: "--memory-limit 1000 --dir-mode 0777 --file-mode 0666"
@@ -86,7 +86,7 @@ user_values:
       en: Volume reclaim policy
       ru: Политика очистки томов
     description:
-      en: Volume reclaim policy for the storage class (Retain or Delete)
+      en: The volume reclaim policy for the storage class (Retain or Delete).
       ru: Выберите политику очистки томов PersistentVolume при удалении PersistentVolumeClaim. Retain — сохранять том, Delete — удалять том.
     string_selector_value:
       default_value: Delete
@@ -98,25 +98,25 @@ user_values:
       en: Storage class name
       ru: Название класса хранения
     description:
-      en: Name of the storage class that will be created
+      en: Name of the storage class to be created.
       ru: Название класса хранения, который будет создан при установке.
     string_value:
       default_value: csi-s3
   - name: secret.name
     title:
-      en: Name of the secret
+      en: Secret name
       ru: Название секрета
     description:
-      en: Name of the secret to create or use for the storage class
+      en: The name of the secret to be created or used for the storage class.
       ru: Название секрета, который будет создан или использован для класса хранения.
     string_value:
       default_value: csi-s3-secret
   - name: tolerations.all
     title:
-      en: Tolerate all taints
+      en: Ignore all taints
       ru: Игнорировать все политики taint
     description:
-      en: Tolerate all taints by the CSI-S3 node driver (mounter)
+      en: Enable this option so that the CSI driver that mounts the file system on nodes will ignore all the taint policies for the cluster nodes.
       ru: Выберите, чтобы драйвер CSI, который монтирует файловую систему на узлах, игнорировал все политики taint для узлов кластера.
     boolean_value:
       default_value: false
