feat(image_secrets): add support for private registries

--- a/deploy/helm/csi-s3/values.yaml
+++ b/deploy/helm/csi-s3/values.yaml
@@ -48,3 +48,9 @@ tolerations:
 nodeSelector: {}
 
 kubeletPath: /var/lib/kubelet
+
+# Image pull secrets for private registries
+# Example:
+# imagePullSecrets:
+#   - name: myregistrykey
+imagePullSecrets: []
